--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Freelancer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  <link href="https://file.myfontastic.com/itB5qJBMGkViNxiEcarVea/icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:900" rel="stylesheet">
+  <script src="main.js"></script>
+</head>
+<body>
+  <header class= "header">
+      <div class= "start">
+        <a>START BOOTSTRAP</a>
+      </div>
+      <div class= "buttons">
+        <a class="portfolio-button">PORTFOLIO</a>
+        <a class="about-button">ABOUT</a>
+        <a class="contact-button">CONTACT</a>
+      </div>
+	</header>
+  <section class="banner">
+    <img class="profile" src="assets/images/profile.png"/>
+    <h1 class= "banner title">START BOOTSTRAP</h1>
+    <i class="icon-star"></i> 
+    <p class= "banner description">Web Developer - Graphic Artist - User Experience Designer</h2>
+</section>
+<section class= "portfolio">
+  <h2>PORTFOLIO</h2> 
+  <i class="icon-star"></i> 
+  <div class= "imgs">
+    <img class="cabin" src="assets/images/portfolio/cabin.png"/>
+    <img class="cake" src="assets/images/portfolio/cake.png"/>
+    <img class="circus" src="assets/images/portfolio/circus.png"/>
+    <img class="game" src="assets/images/portfolio/game.png"/>
+    <img class="safe" src="assets/images/portfolio/safe.png"/>
+    <img class="submarine" src="assets/images/portfolio/submarine.png"/>
+  </div>
+</section>
+<section class= "about">
+    <h2>ABOUT</h2>
+    <i class="icon-star"></i> 
+    <div class= "text">
+      <p class= "text-about one">
+        Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
+      </p>
+      <p class= "text-about two">
+        Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
+      </p>
+    </div>
+    <div class= "download-buttom">
+      <i class="icon-download"></i>
+      <a class= "download">Download Theme</a>
+    </div>
+  </section>
+
+
+  <section class= "contact">
+      <h2>CONTACT ME</h2>
+      <i class="icon-star"></i> 
+      <form class="info">
+        <input type="text" class="fname"  placeholder="Name">
+        <input type="text" class="email"  placeholder="Email Address">
+        <input type="text" class="phone"  placeholder="Phone Number">
+        <input type="text" class="subject" placeholder="Message">
+			</form>
+			<i class= "send-buttom">Send</i>
+    </section>
+
+		<footer>
+			<div class= "footer">
+				<div class= "address">
+					<h4>LOCATION</h4>
+					<p>3481 Melrose Place</p>
+					<p>Beverly Hills, CA 90210</p>
+				</div>
+				<div class= "social-media">
+					<h4>AROUND THE WEB</h4>
+					<i class="icon-facebook"></i>
+					<i class="icon-twitter"></i>
+					<i class="icon-linkedin"></i>
+				</div>
+				<div class="about-us">
+					<h4>ABOUT FREELANCER</h4>
+					<p>Freelancer is a free to use, open source Bootstrap theme created by <strong>Start Bootstrap</strong>.</p>
+				</div>
+			</div>
+			<p class= "end">Copyright Your Website 2017</p>
+		</footer>
+	</body>
+	</html>
