--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <script src="main.js"></script>
 </head>
 <body>
-  <header class= "header">
-      <div class= "start">
+  <header class="header">
+      <div class="start">
         <a>START BOOTSTRAP</a>
       </div>
-      <div class= "buttons">
+      <div class="buttons">
         <a class="portfolio-button">PORTFOLIO</a>
         <a class="about-button">ABOUT</a>
         <a class="contact-button">CONTACT</a>
@@ -23,14 +23,14 @@
 	</header>
   <section class="banner">
     <img class="profile" src="assets/images/profile.png"/>
-    <h1 class= "banner title">START BOOTSTRAP</h1>
+    <h1 class="banner title">START BOOTSTRAP</h1>
     <i class="icon-star"></i> 
-    <p class= "banner description">Web Developer - Graphic Artist - User Experience Designer</h2>
+    <p class="banner description">Web Developer - Graphic Artist - User Experience Designer</h2>
 </section>
-<section class= "portfolio">
+<section class="portfolio">
   <h2>PORTFOLIO</h2> 
   <i class="icon-star"></i> 
-  <div class= "imgs">
+  <div class="imgs">
     <img class="cabin" src="assets/images/portfolio/cabin.png"/>
     <img class="cake" src="assets/images/portfolio/cake.png"/>
     <img class="circus" src="assets/images/portfolio/circus.png"/>
@@ -39,25 +39,23 @@
     <img class="submarine" src="assets/images/portfolio/submarine.png"/>
   </div>
 </section>
-<section class= "about">
+<section class="about">
     <h2>ABOUT</h2>
     <i class="icon-star"></i> 
-    <div class= "text">
-      <p class= "text-about one">
+    <div class="text">
+      <p class="text-about one">
         Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
       </p>
-      <p class= "text-about two">
+      <p class="text-about two">
         Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
       </p>
     </div>
-    <div class= "download-buttom">
+    <div class="download-buttom">
       <i class="icon-download"></i>
-      <a class= "download">Download Theme</a>
+      <a class="download">Download Theme</a>
     </div>
   </section>
-
-
-  <section class= "contact">
+  <section class="contact">
       <h2>CONTACT ME</h2>
       <i class="icon-star"></i> 
       <form class="info">
@@ -66,17 +64,17 @@
         <input type="text" class="phone"  placeholder="Phone Number">
         <input type="text" class="subject" placeholder="Message">
 			</form>
-			<i class= "send-buttom">Send</i>
+			<i class="send-buttom">Send</i>
     </section>
 
 		<footer>
-			<div class= "footer">
-				<div class= "address">
+			<div class="footer">
+				<div class="address">
 					<h4>LOCATION</h4>
 					<p>3481 Melrose Place</p>
 					<p>Beverly Hills, CA 90210</p>
 				</div>
-				<div class= "social-media">
+				<div class="social-media">
 					<h4>AROUND THE WEB</h4>
 					<i class="icon-facebook"></i>
 					<i class="icon-twitter"></i>
@@ -87,7 +85,7 @@
 					<p>Freelancer is a free to use, open source Bootstrap theme created by <strong>Start Bootstrap</strong>.</p>
 				</div>
 			</div>
-			<p class= "end">Copyright Your Website 2017</p>
+			<p class="end">Copyright © Your Website 2017</p>
 		</footer>
 	</body>
 	</html>
